# ai-search-skill

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  SKILL.md  aisearch.py  pyproject.toml
docs/: ARCHITECTURE.md  INSTALL_SKILL.md
examples/: research-output.example.json
src/aisearch/: __init__.py  cli.py  config.py  models.py  orchestrator.py  planner.py  publisher.py  reader.py  router.py  scoring.py  thread_reader.py  utils.py  verifier.py
src/aisearch/providers/: __init__.py  base.py  brave.py  exa.py  firecrawl.py  jina.py  mineru.py  perplexity.py  tavily.py
tests/: test_cli.py  test_planner_router.py  test_providers.py  test_reader.py  test_thread_reader.py  test_verifier.py
